--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <ul class="networks-list" >
                     <li>
                         <a target="_blank"
-                        href="https://www.twitch.tv/vitu_lol"><img src="Twitch.svg" width="32" height="32" alt=""></a>
+                        href="https://www.twitch.tv/vitu_lol"><img src="Twitch.svg" width="32" height="32" alt="Imagem Twitch"></a>
                     </li>
                     <li>
                         <a target="_blank"
@@ -100,7 +100,7 @@
                     </li>
                     <li>
                         <a target="_blank"
-                        href="https://www.instagram.com/vitor__gabriel1/"><img src="Instagram.svg" width="32" height="32" alt=""></a>
+                        href="https://www.instagram.com/vitor__gabriel1/"><img src="Instagram.svg" width="32" height="32" alt="Imagem Instagram"></a>
                     </li>
                     <li>
                         <a target="_blank"
