--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <div>
                 <h2>Meus Jogos</h2>
-                <p>Os games que eu mais curto jogar</p>
+                <p>Os games que eu mais curto jogar!</p>
                 <ul class="games-list" >
                     <li>
                         <a target="_blank"
@@ -51,7 +51,7 @@
         <section>
             <div>
                 <h2>Canais e streamers</h2>
-                <p>Lista de canais e transmissões que não perco!!</p>
+                <p>Lista de canais e transmissões que não perco!</p>
                 <ul class="channel-list" >
                     <li>
                         <a target="_blank"
@@ -104,7 +104,7 @@
                     </li>
                     <li>
                         <a target="_blank"
-                        href=""> <img src="Discord.svg" width="32" height="32" alt="Imagem Discord"></a>
+                        href="https://discord.gg/5hRejkCsTt"> <img src="Discord.svg" width="32" height="32" alt="Imagem Discord"></a>
                     </li>
                 </ul>
             </div>
