--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     </li>
                     <li>
                         <a target="_blank"
-                        href="https://www.instagram.com/vitor__gabriel1/"><img src="Instagram.svg" width="32" height="32" alt="Imagem Instagram"></a>
+                        href="/"><img src="Instagram.svg" width="32" height="32" alt="Imagem Instagram"></a>
                     </li>
                     <li>
                         <a target="_blank"
-                        href="https://discord.gg/5hRejkCsTt"> <img src="Discord.svg" width="32" height="32" alt="Imagem Discord"></a>
+                        href=""> <img src="Discord.svg" width="32" height="32" alt="Imagem Discord"></a>
                     </li>
                 </ul>
             </div>
